# qriosity

./: README.md  build.sh  gps.py  main.js  main.py  package.json  requirements.txt  rover.py  run.sh  standard_firmata_plus.ino
gui/: index.html  main.py  main.qml
src/command/: CMakeLists.txt  package.xml
src/command/src/server/: __init__.py
src/control/: CMakeLists.txt  package.xml
src/control/launch/: control.launch
src/control/src/: control_node.cpp
src/control_firmware/: CMakeLists.txt  package.xml
src/control_firmware/src/: CMakeLists.txt  firmware_node.cpp
src/webserver/: CMakeLists.txt  package.xml  setup.py
tests/: obstacle_detection.py  realsense_distance.cpp
